add friendly link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             <h1 id="word4" class="text" lang="?"></h1>
         </div>
     </div>
-    <div class="tbox" data-d="Happy Icecream! In construction">Happy Icecream! In construction.. </div>
+    <div class="tbox" data-d="Happy Icecream! In construction">Happy Icecream! In construction.. Current work:
+        <a href="http://aizcutei.com/music" >aizcutei.com/music</a>
+    </div>
 
     <script>
         var dic = ["/", ">", "+", "[", "]", "`", "=", "}", "?", "^", "&", "#", "@", "!", "+", "{", "<", "*",")","("];
